realistic seeder
